--- a/views/user/Login.ejs
+++ b/views/user/Login.ejs
@@ -70,7 +70,7 @@
                       </div>
                       <div class="text-muted text-center">
                         Don't have an account?
-                        <a href="/user/emailAuth">Create Account</a>
+                        <a href="/user/signup">Create Account</a>
                       </div>
                     </form>
                   </div>
