--- a/views/user/Signup.ejs
+++ b/views/user/Signup.ejs
@@ -1,4 +1,4 @@
-﻿<%-include("./partials/header.ejs")%>
+<%-include("./partials/header.ejs")%>
 <style>
   /* Remove the spinner controls for number input */
   input[type="number"]::-webkit-inner-spin-button,
@@ -8,6 +8,7 @@
     margin: 0;
   }
 </style>
+
 <body>
   <main>
     <section class="pt-150 pb-150">
@@ -23,23 +24,32 @@
                     <div class="heading_s1 d-flex justify-content-center">
                       <h3 class="mb-30">Create an Account</h3>
                     </div>
-                    <form method="post" id="userForm" action="/user/">
+                    <form method="post" id="userInfoForm" action="/user/submit">
                       <!-- <span id="errSignupName" class="text-danger"></span> -->
                       <!-- need to find if user already exsists or not -->
+
+                      <div class="form-group">
+                        <input
+                          type="text"
+                          name="username"
+                          placeholder="Username"
+                          id="name"
+                        />
+                      </div>
                       <div
                         class="text-danger"
                         id="validateName"
                         style="display: none"
                       >
-                        please enter valid username
+                        username must contain atleast of 3 characters
                       </div>
+
                       <div class="form-group">
                         <input
                           type="text"
-                          required=""
-                          name="username"
-                          placeholder="Username"
-                          id="userName"
+                          name="email"
+                          placeholder="Email"
+                          id="email"
                         />
                       </div>
                       <div
@@ -49,13 +59,13 @@
                       >
                         please enter valid email address
                       </div>
+
                       <div class="form-group">
                         <input
-                          type="text"
-                          required=""
-                          name="email"
-                          placeholder="Email"
-                          id="email"
+                          type="number"
+                          name="phonenumber"
+                          placeholder="Phone Number"
+                          id="phone"
                         />
                       </div>
                       <div
@@ -65,25 +75,9 @@
                       >
                         please enter valid phone number
                       </div>
-                      <div class="form-group">
-                        <input
-                          type="number"
-                          name="phonenumber"
-                          placeholder="Phone Number"
-                          id="phoneNumber"
-                        />
-                      </div>
-                      <div
-                        class="text-danger"
-                        id="validatePassword"
-                        style="display: none"
-                      >
-                        password must contain minimum of atleast 8 characters
-                      </div>
 
                       <div class="form-group">
                         <input
-                          required=""
                           type="password"
                           name="password"
                           placeholder="Password"
@@ -91,11 +85,18 @@
                         />
                       </div>
 
+                      <div
+                        class="text-danger"
+                        id="validatePassword"
+                        style="display: none"
+                      >
+                        password must contain minimum of 6 characters
+                      </div>
+
                       <div class="form-group">
                         <input
-                          required=""
                           type="password"
-                          name="password"
+                          name="Cpassword"
                           placeholder="Confirm password"
                           id="ConfirmPassword"
                         />
@@ -119,23 +120,64 @@
                           Show Password
                         </label>
                       </div>
+
+                      <div class="row">
+                        <div class="form-group d-flex mt-10 col-lg-9">
+                          <input
+                            type="number"
+                            name="otp"
+                            placeholder="Enter 6 digit OTP"
+                            id="otp"
+                          />
+                        </div>
+
+                        <!-- <div
+                          class="text-danger mb-10"
+                          id="validateOtp"
+                          style="display: inline"
+                        >
+                          invalid Otp
+                        </div> -->
+
+                        <div
+                          class="d-flex align-items-center justify-content-around"
+                        >
+                          <div
+                            class="btn btn-fill-out btn-block mb-30"
+                            name="sendOtp"
+                            id="sendOtpBtn"
+                          >
+                            Send OTP
+                          </div>
+                          <div
+                            id="verifyOtpBtn"
+                            class="btn btn-fill-out btn-block mb-30"
+                            name="verifyOtp"
+                          >
+                            Verify OTP
+                          </div>
+                        </div>
+                      </div>
+
                       <div class="form-group d-flex justify-content-center">
                         <button
                           type="submit"
                           class="btn btn-fill-out btn-block hover-up"
                           name="login"
+                          id="submitBtn"
+                          disabled
                         >
                           Submit &amp; Register
                         </button>
                       </div>
                     </form>
-                    <div class="divider-text-center mt-15 mb-15">
+                    <!-- <div class="divider-text-center mt-15 mb-15">
                       <span> or</span>
                     </div>
                     <div class="text-muted text-center">
                       Already have an account?
                       <a href="/user/login">Sign in now</a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -147,85 +189,217 @@
   </main>
 
   <script>
-    // show the visiblility of password
-    function togglePassword() {
-      let passwordEle = document.getElementById("password");
-      let ConfirmPassword = document.getElementById("ConfirmPassword");
-      if (
-        passwordEle.type === "password" &&
-        ConfirmPassword.type === "password"
-      ) {
-        passwordEle.type = "text";
-        ConfirmPassword.type = "text";
-      } else {
-        passwordEle.type = "password";
-        ConfirmPassword.type = "password";
-      }
-    }
-
     document.addEventListener("DOMContentLoaded", function () {
-      const form = document.getElementById("userForm");
-      form.addEventListener("submit", function (event) {
-        const name = document.getElementById("userName").value;
+      const submit = document.getElementById("submitBtn");
+      const sendOtpBtn = document.getElementById("sendOtpBtn");
+      const verifyOtpBtn = document.getElementById("verifyOtpBtn");
+
+      sendOtpBtn.addEventListener("click", async function (event) {
+        const name = document.getElementById("name").value;
         const email = document.getElementById("email").value;
-        const phone = document.getElementById("phoneNumber").value;
+        const phone = document.getElementById("phone").value;
         const password = document.getElementById("password").value;
-        const cPassword = document.getElementById("ConfirmPassword").value;
+        const confirmPassword =
+          document.getElementById("ConfirmPassword").value;
 
-        const vName = document.getElementById("validateName");
-        if (name.trim() === "") {
-          vName.style.display = "block";
+        // variable name to show error message
+
+        const nameVm = document.getElementById("validateName");
+        const emailVm = document.getElementById("validateEmail");
+        const phoneVm = document.getElementById("validatePhone");
+        const passwordVm = document.getElementById("validatePassword");
+        const confirmPasswordVm = document.getElementById("validateCPassword");
+        // user input value
+
+        if (name.trim() === "" || !usernameValidation(name)) {
+          nameVm.style.display = "block";
           event.preventDefault();
         } else {
-          vName.style.display = "none";
+          nameVm.style.display = "none";
         }
 
-        const vEmail = document.getElementById("validateEmail");
-        if (email.trim() === "" || emailValidation(email)) {
-          vEmail.style.display = "block";
+        if (email.trim() === "" || !emailValidation(email)) {
+          emailVm.style.display = "block";
           event.preventDefault();
         } else {
-          vEmail.style.display = "none";
+          emailVm.style.display = "none";
         }
 
-        const vPhone = document.getElementById("validatePhone");
-        if (phone.trim() === "" || phoneValidation(phone)) {
-          vPhone.style.display = "block";
+        if (phone.trim() === "" || !phoneValidation(phone)) {
+          phoneVm.style.display = "block";
           event.preventDefault();
         } else {
-          vPhone.style.display = "none";
+          phoneVm.style.display = "none";
         }
 
-        const vPassword = document.getElementById("validatePassword");
         if (password === "" || !passwordValidate(password)) {
-          vPassword.style.display = "block";
+          passwordVm.style.display = "block";
           event.preventDefault();
         } else {
-          vPassword.style.display = "none";
+          passwordVm.style.display = "none";
         }
 
-        const vCPassword = document.getElementById("validateCPassword");
-        if (password != cPassword) {
-          vCPassword.style.display = "block";
+        if (!confirmPasswordMatch(password, confirmPassword)) {
+          confirmPasswordVm.style.display = "block";
           event.preventDefault();
         } else {
-          vCPassword.style.display = "none";
+          confirmPasswordVm.style.display = "none";
+        }
+        // write the fetch and send otp
+        if (
+          nameVm.style.display === "none" &&
+          emailVm.style.display === "none" &&
+          phoneVm.style.display === "none" &&
+          passwordVm.style.display === "none" &&
+          confirmPasswordVm.style.display === "none"
+        ) {
+          // write the fetch and send otp
+          console.log(email);
+          console.log(phone);
+          try {
+            sendOtpBtn.style.display = "none";
+            const response = await fetch(
+              `/user/sendotp?email=${email}&phone=${phone}`
+            );
+            const data = await response.json();
+
+            console.log("Success:", data);
+            if (data.message) {
+              Swal.fire({
+                title: "veeLap",
+                text: data.message,
+                icon: "success",
+                confirmButtonText: "Ok",
+                timer: 3000,
+                timerProgressBar: true,
+              });
+              setTimeout(() => {
+                sendOtpBtn.style.display = "block";
+                sendOtpBtn.innerHTML = "Resent OTP";
+              }, 10000);
+            } else if (data.error) {
+              Swal.fire({
+                title: "Hello!",
+                text: data.error,
+                icon: "error",
+                confirmButtonText: "Ok",
+                timer: 3000,
+                timerProgressBar: true,
+              });
+            }
+          } catch (error) {
+            console.error("Error:", error);
+          }
         }
       });
+
+      // verify OTP
+      try {
+        verifyOtpBtn.addEventListener("click", async (event) => {
+          const userOtp = document.getElementById("otp").value;
+          event.preventDefault();
+          fetch(`/user/verify-otp?userOtp=${userOtp}`, {
+            method: "POST",
+          })
+            .then((Response) => {
+              return Response.json();
+            })
+            .then((data) => {
+              console.log("data from server :", data);
+              if (data.message) {
+                Swal.fire({
+                  title: "veeLap",
+                  text: data.message,
+                  icon: "success",
+                  showConfirmButton: false,
+                  timer: 3000,
+                  timerProgressBar: true,
+                });
+                submit.disabled = false;
+                setTimeout(() => {
+                  var intervalId = setInterval(() => {
+                    console.log("exicuted");
+                    sendOtpBtn.style.display = "none";
+                    verifyOtpBtn.style.display = "none";
+                  }, 2000);
+                }, 1000);
+              } else if (data.error) {
+                Swal.fire({
+                  title: "Sorry!",
+                  text: data.error,
+                  icon: "error",
+                  confirmButtonText: "Ok",
+                  timer: 3000,
+                  timerProgressBar: true,
+                });
+              }
+            });
+        });
+      } catch (error) {
+        console.error(error);
+      }
+      submitBtn.addEventListener("click", () => {
+        clearInterval(intervalId);
+        console.log("DOne");
+      });
     });
+
+    function usernameValidation(name) {
+      const pattern = /^[a-zA-Z0-9_]+$/;
+      const minLength = 3;
+      const maxLength = 20;
+
+      const isValid =
+        pattern.test(name) &&
+        name.length >= minLength &&
+        name.length <= maxLength;
+
+      return isValid;
+    }
 
     function emailValidation(email) {
       const pattern = /^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/;
       return pattern.test(email);
     }
+
     function phoneValidation(phone) {
       const pattern = /^(\+?91)?[6-9]\d{9}$/;
       return pattern.test(phone);
     }
+
     function passwordValidate(password) {
-      const pattern = /^.{8,}$/;
-      return pattern.test(password);
+      const minLength = 4;
+      return password.length >= minLength;
+    }
+
+    function confirmPasswordMatch(password, confirmPassword) {
+      return password === confirmPassword;
+    }
+
+    function togglePassword() {
+      const password = document.getElementById("password");
+      const confirmPassword = document.getElementById("ConfirmPassword");
+      if (password.type === "password" && confirmPassword.type === "password") {
+        password.type = "text";
+        confirmPassword.type = "text";
+      } else {
+        password.type = "password";
+        confirmPassword.type = "password";
+      }
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
   <%-include("./partials/footer.ejs")%>
 </body>
+<!-- Swal.fire({
+  title: "Hello!",
+  text: error,
+  icon: "error",
+  confirmButtonText: "Ok",
+  timer: 3000, // Set the timer to 3000 milliseconds (3 seconds)
+  timerProgressBar: true, // Show a progress bar during the timer duration
+}); -->
+<!-- 
+Swal.fire({ title: "Hello!", text: error, icon: "error", confirmButtonText:
+"Ok", timer: 3000, // Set the timer to 3000 milliseconds (3 seconds)
+timerProgressBar: true, // Show a progress bar during the timer duration }); -->
