--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -19,6 +19,8 @@
     />
     <!-- Template CSS -->
     <link rel="stylesheet" href="/userassets/css/main.css" />
+    <!-- <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
+
   </head>
 
   <body>
@@ -68,7 +70,9 @@
                   </li> -->
                   <li>
                     <i class="fi-rs-user"></i
-                    ><a href="/user/login">Log In / Sign Up</a>
+                    ><a href="/user/login">Log In</a>
+                    <span class="pl-5 pr-5"> | </span>
+                    <a href="/user/signup">Sign Up</a>
                   </li>
                 </ul>
               </div>
