--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -27,7 +27,7 @@
         <div class="card mx-auto card-login">
           <div class="card-body">
             <h4 class="card-title mb-4">Sign in</h4>
-            <form method="post" action="/admin/verifyAdmin" id="adminForm">
+            <form method="post" action="/admin/verify-admin" id="adminForm">
               <div class="mb-3">
                 <input
                   class="form-control"
