--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -41,24 +41,24 @@
       <nav>
         <ul class="menu-aside">
           <li class="menu-item active">
-            <a class="menu-link" href="index.html">
+            <a class="menu-link" href="/admin/">
               <i class="icon material-icons md-home"></i>
               <span class="text">Dashboard</span>
             </a>
           </li>
-          <li class="menu-item has-submenu">
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-products-list.html">
               <i class="icon material-icons md-shopping_bag"></i>
               <span class="text">Products</span>
             </a>
             <div class="submenu">
-              <a href="page-products-list.html">Product List</a>
-              <a href="page-products-grid.html">Product grid</a>
+              <a href="">All Products</a>
+              <a href="/admin/view-add-product">Add product</a>
               <a href="page-products-grid-2.html">Product grid 2</a>
               <a href="page-categories.html">Categories</a>
             </div>
-          </li>
-          <li class="menu-item has-submenu">
+          </li> -->
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-orders-1.html">
               <i class="icon material-icons md-shopping_cart"></i>
               <span class="text">Orders</span>
@@ -68,7 +68,7 @@
               <a href="page-orders-2.html">Order list 2</a>
               <a href="page-orders-detail.html">Order detail</a>
             </div>
-          </li>
+          </li> -->
           <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-sellers-cards.html">
               <i class="icon material-icons md-store"></i>
@@ -80,19 +80,14 @@
               <a href="page-seller-detail.html">Seller profile</a>
             </div>
           </li> -->
-          <!-- <li class="menu-item has-submenu">
-            <a class="menu-link" href="page-form-product-1.html">
-              <i class="icon material-icons md-add_box"></i>
-              <span class="text">Add product</span>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-products">
+              <i class="icon material-icons md-shopping_bag"></i>
+              <span class="text">Products</span>
             </a>
-            <div class="submenu">
-              <a href="page-form-product-1.html">Add product 1</a>
-              <a href="page-form-product-2.html">Add product 2</a>
-              <a href="page-form-product-3.html">Add product 3</a>
-              <a href="page-form-product-4.html">Add product 4</a>
-            </div>
           </li>
-          <li class="menu-item has-submenu">
+
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-transactions-1.html">
               <i class="icon material-icons md-monetization_on"></i>
               <span class="text">Transactions</span>
@@ -102,7 +97,8 @@
               <a href="page-transactions-2.html">Transaction 2</a>
             </div>
           </li> -->
-          <li class="menu-item has-submenu">
+
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="#">
               <i class="icon material-icons md-person"></i>
               <span class="text">Account</span>
@@ -112,17 +108,17 @@
               <a href="page-account-register.html">User registration</a>
               <a href="page-error-404.html">Error 404</a>
             </div>
-          </li>
+          </li> -->
           <li class="menu-item">
-            <a class="menu-link" href="page-reviews.html">
-              <i class="icon material-icons md-comment"></i>
-              <span class="text">Reviews</span>
+            <a class="menu-link" href="/admin/view-alluser">
+              <i class="icon material-icons md-person"></i>
+              <span class="text">User Management</span>
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="page-brands.html">
+            <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
-              <span class="text">Brands</span>
+              <span class="text">Categories</span>
             </a>
           </li>
           <!-- <li class="menu-item">
