--- a/views/admin/editcategory.ejs
+++ b/views/admin/editcategory.ejs
@@ -40,25 +40,25 @@
       </div>
       <nav>
         <ul class="menu-aside">
-          <li class="menu-item active">
-            <a class="menu-link" href="index.html">
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/">
               <i class="icon material-icons md-home"></i>
               <span class="text">Dashboard</span>
             </a>
           </li>
-          <li class="menu-item has-submenu">
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-products-list.html">
               <i class="icon material-icons md-shopping_bag"></i>
               <span class="text">Products</span>
             </a>
             <div class="submenu">
-              <a href="page-products-list.html">Product List</a>
-              <a href="page-products-grid.html">Product grid</a>
+              <a href="">All Products</a>
+              <a href="/admin/view-add-product">Add product</a>
               <a href="page-products-grid-2.html">Product grid 2</a>
               <a href="page-categories.html">Categories</a>
             </div>
-          </li>
-          <li class="menu-item has-submenu">
+          </li> -->
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-orders-1.html">
               <i class="icon material-icons md-shopping_cart"></i>
               <span class="text">Orders</span>
@@ -68,7 +68,7 @@
               <a href="page-orders-2.html">Order list 2</a>
               <a href="page-orders-detail.html">Order detail</a>
             </div>
-          </li>
+          </li> -->
           <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-sellers-cards.html">
               <i class="icon material-icons md-store"></i>
@@ -80,19 +80,14 @@
               <a href="page-seller-detail.html">Seller profile</a>
             </div>
           </li> -->
-          <!-- <li class="menu-item has-submenu">
-            <a class="menu-link" href="page-form-product-1.html">
-              <i class="icon material-icons md-add_box"></i>
-              <span class="text">Add product</span>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-products">
+              <i class="icon material-icons md-shopping_bag"></i>
+              <span class="text">Products</span>
             </a>
-            <div class="submenu">
-              <a href="page-form-product-1.html">Add product 1</a>
-              <a href="page-form-product-2.html">Add product 2</a>
-              <a href="page-form-product-3.html">Add product 3</a>
-              <a href="page-form-product-4.html">Add product 4</a>
-            </div>
           </li>
-          <li class="menu-item has-submenu">
+
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-transactions-1.html">
               <i class="icon material-icons md-monetization_on"></i>
               <span class="text">Transactions</span>
@@ -102,7 +97,8 @@
               <a href="page-transactions-2.html">Transaction 2</a>
             </div>
           </li> -->
-          <li class="menu-item has-submenu">
+
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="#">
               <i class="icon material-icons md-person"></i>
               <span class="text">Account</span>
@@ -112,17 +108,17 @@
               <a href="page-account-register.html">User registration</a>
               <a href="page-error-404.html">Error 404</a>
             </div>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="page-reviews.html">
-              <i class="icon material-icons md-comment"></i>
-              <span class="text">Reviews</span>
+          </li> -->
+          <li class="menu-item ">
+            <a class="menu-link" href="/admin/view-alluser">
+              <i class="icon material-icons md-person"></i>
+              <span class="text">User Management</span>
             </a>
           </li>
-          <li class="menu-item">
-            <a class="menu-link" href="page-brands.html">
+          <li class="menu-item active">
+            <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
-              <span class="text">Brands</span>
+              <span class="text">Categories</span>
             </a>
           </li>
           <!-- <li class="menu-item">
@@ -240,6 +236,78 @@
           </ul>
         </div>
       </header>
-    </main>
-  </body>
-</html>
+      <section class="content-main">
+        <div class="content-header">
+            <h3 class="content-title">Edit Category</h3>
+            <p>Edit all details about the categories</p>
+        </div>
+        <div class="card mb-4">
+            <div class="col-md-12">
+                <form method="post" action="/admin/post-edit-category/<%= categortData._id %>" >
+                    <div class="form-group">
+                        <label for="catgName" class="form-label ml-10 mb-10 mt-10 text-decoration-underline">Category Name</label>
+                        <input type="text" class="form-control" id="catgName" name="newCatgName" placeholder="Enter category name" value="<%=categortData.categoryName %>">
+                        <div class="invalid-feedback text-danger" style="display: none;" id="messag">
+                            Please provide a valid category name.
+                        </div>
+                    </div>
+                    <div class="form-group text-center mt-20 mb-20">
+                        <button type="submit" class="btn btn-primary" id="submitBtn">Confirm Edit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    
+      <footer class="main-footer font-xs">
+        <div class="row pb-30 pt-15">
+          <div class="col-sm-6">
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            ©, Evara - HTML Ecommerce Template .
+          </div>
+          <div class="col-sm-6">
+            <div class="text-sm-end">All rights reserved</div>
+          </div>
+        </div>
+      </footer>
+      <script>
+document.addEventListener("DOMContentLoaded",()=>{
+  console.log(categortData._id);
+
+      const submitBtn = document.getElementById("submitBtn")
+      const invalidMessage = document.getElementById("messag") 
+  try {
+      submitBtn.addEventListener("click",(event)=>{
+        const updatedName = document.getElementById("catgName").value
+         if(updatedName === "" || !validationName(updatedName)){
+            invalidMessage.style.display = "block"
+            event.preventDefault()
+          }else{
+            invalidMessage.style.display = "none"
+          }
+       })
+      } catch (error) {
+      console.log("error in validation" + error);
+      }
+})  
+
+        function validationName(name){
+          const Pattern = /^[^\d]+$/;
+          return Pattern.test(name);
+        }
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
+      <script src="/adminassets/js/vendors/jquery-3.6.0.min.js"></script>
+      <script src="/adminassets/js/vendors/bootstrap.bundle.min.js"></script>
+      <script src="/adminassets/js/vendors/select2.min.js"></script>
+      <script src="/adminassets/js/vendors/perfect-scrollbar.js"></script>
+      <script src="/adminassets/js/vendors/jquery.fullscreen.min.js"></script>
+  
+
+    </body>
+  
+    <!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/page-categories.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:33:21 GMT -->
+  </html>
+  
