--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -40,25 +40,25 @@
       </div>
       <nav>
         <ul class="menu-aside">
-          <li class="menu-item active">
-            <a class="menu-link" href="index.html">
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/">
               <i class="icon material-icons md-home"></i>
               <span class="text">Dashboard</span>
             </a>
           </li>
-          <li class="menu-item has-submenu">
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-products-list.html">
               <i class="icon material-icons md-shopping_bag"></i>
               <span class="text">Products</span>
             </a>
             <div class="submenu">
-              <a href="page-products-list.html">Product List</a>
-              <a href="page-products-grid.html">Product grid</a>
+              <a href="">All Products</a>
+              <a href="/admin/view-add-product">Add product</a>
               <a href="page-products-grid-2.html">Product grid 2</a>
               <a href="page-categories.html">Categories</a>
             </div>
-          </li>
-          <li class="menu-item has-submenu">
+          </li> -->
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-orders-1.html">
               <i class="icon material-icons md-shopping_cart"></i>
               <span class="text">Orders</span>
@@ -68,7 +68,7 @@
               <a href="page-orders-2.html">Order list 2</a>
               <a href="page-orders-detail.html">Order detail</a>
             </div>
-          </li>
+          </li> -->
           <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-sellers-cards.html">
               <i class="icon material-icons md-store"></i>
@@ -80,19 +80,14 @@
               <a href="page-seller-detail.html">Seller profile</a>
             </div>
           </li> -->
-          <!-- <li class="menu-item has-submenu">
-            <a class="menu-link" href="page-form-product-1.html">
-              <i class="icon material-icons md-add_box"></i>
-              <span class="text">Add product</span>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-products">
+              <i class="icon material-icons md-shopping_bag"></i>
+              <span class="text">Products</span>
             </a>
-            <div class="submenu">
-              <a href="page-form-product-1.html">Add product 1</a>
-              <a href="page-form-product-2.html">Add product 2</a>
-              <a href="page-form-product-3.html">Add product 3</a>
-              <a href="page-form-product-4.html">Add product 4</a>
-            </div>
           </li>
-          <li class="menu-item has-submenu">
+
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-transactions-1.html">
               <i class="icon material-icons md-monetization_on"></i>
               <span class="text">Transactions</span>
@@ -102,7 +97,8 @@
               <a href="page-transactions-2.html">Transaction 2</a>
             </div>
           </li> -->
-          <li class="menu-item has-submenu">
+
+          <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="#">
               <i class="icon material-icons md-person"></i>
               <span class="text">Account</span>
@@ -112,17 +108,17 @@
               <a href="page-account-register.html">User registration</a>
               <a href="page-error-404.html">Error 404</a>
             </div>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="page-reviews.html">
-              <i class="icon material-icons md-comment"></i>
-              <span class="text">Reviews</span>
+          </li> -->
+          <li class="menu-item active">
+            <a class="menu-link" href="/admin/view-alluser">
+              <i class="icon material-icons md-person"></i>
+              <span class="text">User Management</span>
             </a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="page-brands.html">
+            <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
-              <span class="text">Brands</span>
+              <span class="text">Categories</span>
             </a>
           </li>
           <!-- <li class="menu-item">
@@ -240,6 +236,126 @@
           </ul>
         </div>
       </header>
+      <section class="content-main">
+        <div class="content-header">
+          <h2 class="content-title">User Management</h2>
+          <!-- <div>
+            <a href="#" class="btn btn-primary"
+              ><i class="material-icons md-plus"></i> Create new</a
+            >
+          </div> -->
+        </div>
+        <div><h6>Details of users</h6></div>
+        <div class="card mb-4">
+          <header class="card-header">
+            <div class="row gx-3">
+              <div class="col-lg-4 col-md-6 me-auto">
+                <input
+                  type="text"
+                  placeholder="Search..."
+                  class="form-control"
+                />
+              </div>
+              <div class="col-lg-2 col-md-3 col-6">
+                <select class="form-select">
+                  <option>Status</option>
+                  <option>Active</option>
+                  <option>Inactive</option>
+                </select>
+              </div>
+              <div class="col-lg-2 col-md-3 col-6">
+                <select class="form-select">
+                  <option>Show 20</option>
+                  <option>Show 30</option>
+                  <option>Show 40</option>
+                </select>
+              </div>
+            </div>
+          </header>
+          <!-- card-header end// -->
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>User Name</th>
+                    <th>Email</th>
+                    <th class="text-center">Phone Number</th>
+                    <th class="text-center">Current Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% users.reverse().forEach((e)=>{ %>
+                  <tr>
+                    <td><%= e.userName %></td>
+                    <td><%= e.email %></td>
+                    <td class="text-center"><%= e.phoneNumber %></td>
+                    <td class="text-center">
+                      <a
+                        href="/admin/user-status?Id=<%= e._id %>"
+                        class="btn btn-<%= (e.status === 'Active')? 'success' : 'danger' %>"
+                      >
+                        <%=e.status%>
+                      </a>
+                    </td>
+                  </tr>
+                  <%}) %>
+                </tbody>
+              </table>
+              <!-- table-responsive.// -->
+            </div>
+          </div>
+          <!-- card-body end// -->
+        </div>
+        <!-- card end// -->
+        <div class="pagination-area mt-15 mb-50">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-start">
+              <li class="page-item active">
+                <a class="page-link" href="#">01</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">02</a></li>
+              <li class="page-item"><a class="page-link" href="#">03</a></li>
+              <li class="page-item">
+                <a class="page-link dot" href="#">...</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">16</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#"
+                  ><i class="material-icons md-chevron_right"></i
+                ></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <!-- content-main end// -->
+      <footer class="main-footer font-xs">
+        <div class="row pb-30 pt-15">
+          <div class="col-sm-6">
+            <script
+              data-cfasync="false"
+              src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+            ></script>
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            ©, Evara - HTML Ecommerce Template .
+          </div>
+          <div class="col-sm-6">
+            <div class="text-sm-end">All rights reserved</div>
+          </div>
+        </div>
+      </footer>
     </main>
+    <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/vendors/select2.min.js"></script>
+    <script src="assets/js/vendors/perfect-scrollbar.js"></script>
+    <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
+    <!-- Main Script -->
+    <script src="assets/js/main.js" type="text/javascript"></script>
   </body>
+
+  <!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/page-sellers-list.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:33:23 GMT -->
 </html>
