--- a/views/user/Signup.ejs
+++ b/views/user/Signup.ejs
@@ -1,137 +1,165 @@
-<%-include("./partials/header.ejs")%>
-<style>
-  /* Remove the spinner controls for number input */
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button,
-  input[type="number"] {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>VeeLap</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/userassets/imgs/theme/favicon.svg"
+    />
+    <!-- Template CSS -->
+    <link rel="stylesheet" href="/userassets/css/main.css" />
+    <!-- <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
+  </head>
+  <style>
+    /* Remove the spinner controls for number input */
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"] {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  </style>
 
-<body>
-  <main>
-    <section class="pt-150 pb-150">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10 m-auto">
-            <div class="row">
-              <div class="col-lg-6 mx-auto">
-                <div
-                  class="login_wrap widget-taber-content p-30 background-white border-radius-5"
-                >
-                  <div class="padding_eight_all bg-white">
-                    <div class="heading_s1 d-flex justify-content-center">
-                      <h3 class="mb-30">Create an Account</h3>
-                    </div>
-                    <form method="post" id="userInfoForm" action="/user/submit">
-                      <!-- <span id="errSignupName" class="text-danger"></span> -->
-                      <!-- need to find if user already exsists or not -->
-
-                      <div class="form-group">
-                        <input
-                          type="text"
-                          name="username"
-                          placeholder="Username"
-                          id="name"
-                        />
+  <body>
+    <main>
+      <section class="pt-150 pb-150">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-10 m-auto">
+              <div class="row">
+                <div class="col-lg-6 mx-auto">
+                  <div
+                    class="login_wrap widget-taber-content p-30 background-white border-radius-5"
+                  >
+                    <div class="padding_eight_all bg-white">
+                      <div class="heading_s1 d-flex justify-content-center">
+                        <h3 class="mb-30">Create an Account</h3>
                       </div>
-                      <div
-                        class="text-danger"
-                        id="validateName"
-                        style="display: none"
+                      <div class="text-danger" id="set">
+                        <% if(error){ %> <%=error%> <%}%>
+                      </div>
+                      <form
+                        method="post"
+                        id="userInfoForm"
+                        action="/user/submit"
                       >
-                        username must contain atleast of 3 characters
-                      </div>
+                        <!-- <span id="errSignupName" class="text-danger"></span> -->
+                        <!-- need to find if user already exsists or not -->
 
-                      <div class="form-group">
-                        <input
-                          type="text"
-                          name="email"
-                          placeholder="Email"
-                          id="email"
-                        />
-                      </div>
-                      <div
-                        class="text-danger"
-                        id="validateEmail"
-                        style="display: none"
-                      >
-                        please enter valid email address
-                      </div>
+                        <div class="form-group">
+                          <input
+                            type="text"
+                            name="userName"
+                            placeholder="Username"
+                            id="name"
+                          />
+                        </div>
+                        <div
+                          class="text-danger"
+                          id="validateName"
+                          style="display: none"
+                        >
+                          username must contain atleast of 3 characters
+                        </div>
 
-                      <div class="form-group">
-                        <input
-                          type="number"
-                          name="phonenumber"
-                          placeholder="Phone Number"
-                          id="phone"
-                        />
-                      </div>
-                      <div
-                        class="text-danger"
-                        id="validatePhone"
-                        style="display: none"
-                      >
-                        please enter valid phone number
-                      </div>
+                        <div class="form-group">
+                          <input
+                            type="text"
+                            name="email"
+                            placeholder="Email"
+                            id="email"
+                          />
+                        </div>
+                        <div
+                          class="text-danger"
+                          id="validateEmail"
+                          style="display: none"
+                        >
+                          please enter valid email address
+                        </div>
 
-                      <div class="form-group">
-                        <input
-                          type="password"
-                          name="password"
-                          placeholder="Password"
-                          id="password"
-                        />
-                      </div>
-
-                      <div
-                        class="text-danger"
-                        id="validatePassword"
-                        style="display: none"
-                      >
-                        password must contain minimum of 6 characters
-                      </div>
-
-                      <div class="form-group">
-                        <input
-                          type="password"
-                          name="Cpassword"
-                          placeholder="Confirm password"
-                          id="ConfirmPassword"
-                        />
-                      </div>
-                      <div
-                        class="text-danger"
-                        id="validateCPassword"
-                        style="display: none"
-                      >
-                        password dosent match
-                      </div>
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="showPassword"
-                          onchange="togglePassword()"
-                        />
-                        <label class="form-check-label" for="showPassword">
-                          Show Password
-                        </label>
-                      </div>
-
-                      <div class="row">
-                        <div class="form-group d-flex mt-10 col-lg-9">
+                        <div class="form-group">
                           <input
                             type="number"
-                            name="otp"
-                            placeholder="Enter 6 digit OTP"
-                            id="otp"
+                            name="phoneNumber"
+                            placeholder="Phone Number"
+                            id="phone"
+                          />
+                        </div>
+                        <div
+                          class="text-danger"
+                          id="validatePhone"
+                          style="display: none"
+                        >
+                          please enter valid phone number
+                        </div>
+
+                        <div class="form-group">
+                          <input
+                            type="password"
+                            name="password"
+                            placeholder="Password"
+                            id="password"
                           />
                         </div>
 
-                        <!-- <div
+                        <div
+                          class="text-danger"
+                          id="validatePassword"
+                          style="display: none"
+                        >
+                          password must contain minimum of 6 characters
+                        </div>
+
+                        <div class="form-group">
+                          <input
+                            type="password"
+                            name="Cpassword"
+                            placeholder="Confirm password"
+                            id="ConfirmPassword"
+                          />
+                        </div>
+                        <div
+                          class="text-danger"
+                          id="validateCPassword"
+                          style="display: none"
+                        >
+                          password dosent match
+                        </div>
+                        <div class="form-check">
+                          <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value=""
+                            id="showPassword"
+                            onchange="togglePassword()"
+                          />
+                          <label class="form-check-label" for="showPassword">
+                            Show Password
+                          </label>
+                        </div>
+
+                        <div class="row">
+                          <div class="form-group d-flex mt-10 col-lg-9">
+                            <input
+                              type="number"
+                              name="otp"
+                              placeholder="Enter 6 digit OTP"
+                              id="otp"
+                            />
+                          </div>
+
+                          <!-- <div
                           class="text-danger mb-10"
                           id="validateOtp"
                           style="display: inline"
@@ -139,54 +167,55 @@
                           invalid Otp
                         </div> -->
 
-                        <div
-                          class="d-flex align-items-center justify-content-around"
-                        >
                           <div
-                            class="btn btn-fill-out btn-block mb-30"
-                            name="sendOtp"
-                            id="sendOtpBtn"
+                            class="d-flex align-items-center justify-content-around"
                           >
-                            Send OTP
-                          </div>
-                          <div
-                            id="verifyOtpBtn"
-                            class="btn btn-fill-out btn-block mb-30"
-                            name="verifyOtp"
-                          >
-                            Verify OTP
+                            <div
+                              class="btn btn-fill-out btn-block mb-30"
+                              name="sendOtp"
+                              id="sendOtpBtn"
+                            >
+                              Send OTP
+                            </div>
+                            <div
+                              id="verifyOtpBtn"
+                              class="btn btn-fill-out btn-block mb-30"
+                              name="verifyOtp"
+                            >
+                              Verify OTP
+                            </div>
                           </div>
                         </div>
-                      </div>
 
-                      <div class="form-group d-flex justify-content-center">
-                        <button
-                          type="submit"
-                          class="btn btn-fill-out btn-block hover-up"
-                          name="login"
-                          id="submitBtn"
-                          disabled
-                        >
-                          Submit &amp; Register
-                        </button>
+                        <div class="form-group d-flex justify-content-center">
+                          <button
+                            type="submit"
+                            class="btn btn-fill-out btn-block hover-up"
+                            name="login"
+                            id="submitBtn"
+                            disabled
+                          >
+                            Submit &amp; Register
+                          </button>
+                        </div>
+                      </form>
+                      <div class="divider-text-center mt-15 mb-15">
+                        <span> or</span>
                       </div>
-                    </form>
-                    <!-- <div class="divider-text-center mt-15 mb-15">
-                      <span> or</span>
+                      <div class="text-muted text-center">
+                        Already have an account?
+                        <a href="/user/login">Log in now</a>
+                      </div>
                     </div>
-                    <div class="text-muted text-center">
-                      Already have an account?
-                      <a href="/user/login">Sign in now</a>
-                    </div> -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
+  </body>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -342,6 +371,9 @@
         clearInterval(intervalId);
         console.log("DOne");
       });
+      setTimeout(() => {
+        document.getElementById("set").style.display = "none";
+      }, 10000);
     });
 
     function usernameValidation(name) {
@@ -389,9 +421,31 @@
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
-  <%-include("./partials/footer.ejs")%>
-</body>
-<!-- Swal.fire({
+  <script src="/userassets/js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="/userassets/js/vendor/jquery-3.6.0.min.js"></script>
+  <script src="/userassets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
+  <script src="/userassets/js/vendor/bootstrap.bundle.min.js"></script>
+  <script src="/userassets/js/plugins/slick.js"></script>
+  <script src="/userassets/js/plugins/jquery.syotimer.min.js"></script>
+  <script src="/userassets/js/plugins/wow.js"></script>
+  <script src="/userassets/js/plugins/jquery-ui.js"></script>
+  <script src="/userassets/js/plugins/perfect-scrollbar.js"></script>
+  <script src="/userassets/js/plugins/magnific-popup.js"></script>
+  <script src="/userassets/js/plugins/select2.min.js"></script>
+  <script src="/userassets/js/plugins/waypoints.js"></script>
+  <script src="/userassets/js/plugins/counterup.js"></script>
+  <script src="/userassets/js/plugins/jquery.countdown.min.js"></script>
+  <script src="/userassets/js/plugins/images-loaded.js"></script>
+  <script src="/userassets/js/plugins/isotope.js"></script>
+  <script src="/userassets/js/plugins/scrollup.js"></script>
+  <script src="/userassets/js/plugins/jquery.vticker-min.js"></script>
+  <script src="/userassets/js/plugins/jquery.theia.sticky.js"></script>
+  <script src="/userassets/js/plugins/jquery.elevatezoom.js"></script>
+  <!-- Template  JS -->
+  <script src="/userassets/js/main.js"></script>
+  <script src="/userassets/js/shop.js"></script>
+
+  <!-- Swal.fire({
   title: "Hello!",
   text: error,
   icon: "error",
@@ -399,7 +453,8 @@
   timer: 3000, // Set the timer to 3000 milliseconds (3 seconds)
   timerProgressBar: true, // Show a progress bar during the timer duration
 }); -->
-<!-- 
+  <!-- 
 Swal.fire({ title: "Hello!", text: error, icon: "error", confirmButtonText:
 "Ok", timer: 3000, // Set the timer to 3000 milliseconds (3 seconds)
 timerProgressBar: true, // Show a progress bar during the timer duration }); -->
+</html>
