--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -211,7 +211,7 @@
                         <div class="product-img-action-wrap">
                           <div class="product-img product-img-zoom">
                             <% if (e && e.images && e.images.length > 0 && e.images[0].path) { %>
-                            <a href="shop-product-right.html">
+                            <a href="/user/product-details/<%= e._id%>">
                                 <!-- BODY HOME FIRST IMAGE -->
                               <img
                                 class="default-img"
