--- a/views/user/wrong.ejs
+++ b/views/user/wrong.ejs
@@ -7,6 +7,19 @@
     -webkit-appearance: none;
     margin: 0;
   }
+  /* 
+  <select class="form-select" id="category" name="category">
+                        <% categoryColl.forEach((e) => {  %>
+                            <% if (product.category.categoryName == e.categoryName) { %>
+                              <option value="<%= e.categoryName %>"  selected>
+                                <%= e.categoryName %>
+                            </option>
+                            <% } else { %>
+                              <option value="<%= e.categoryName %>">
+                                <%= e.categoryName %>
+                            </option>
+                        <% }}) %>
+                    </select>   */
 </style>
 <body>
   <main>
