--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -141,34 +141,34 @@
                 </div>
 
                 <div class="mb-4 mt-20">
-                  <label class="form-label">Full description</label>
+                  <label class="form-label">description</label>
                   <textarea
                     
                     placeholder="Type here"
                     class="form-control"
-                    id="full_description"
+                    id="detailedDescription"
                     name="fullDescription"
                   ><%= product.description%></textarea>
+                  <label class="form-label">Full description</label>
+                  <textarea  
+                    placeholder="Type here"
+                    class="form-control"
+                    id="detailedDescription"
+                    name="detailedDescription"
+                  ><%= product.detailedDescription%></textarea>
                   <div
                     id="full_descriptionError"
                     class="error-message text-danger"
                   ></div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-4">
                     <div class="mb-4">
                       <label class="form-label">Category</label>
-                      <select class="form-select" id="category" name="category">
-                        <% categoryColl.forEach((e) => {  %>
-                            <% if (product.category.categoryName == e.categoryName) { %>
-                              <option value="<%= e.categoryName %>"  selected>
-                                <%= e.categoryName %>
-                            </option>
-                            <% } else { %>
-                              <option value="<%= e.categoryName %>">
-                                <%= e.categoryName %>
-                            </option>
-                        <% }}) %>
+                      <select class="form-select" id="Category" name="category">
+                        <option value="General" <%(product.category.categoryName === "General" )? 'selected':"" %>>General</option>
+                        <option value="Bussiness Laptops" <%(product.category.categoryName === "Bussiness Laptops" )? 'selected':"" %>>Bussiness Laptops</option>
+                        <option value="Gaming Laptops"<%(product.category.categoryName === "Gaming Laptops" )? 'selected':"" %>>Gaming Laptops</option>
                     </select>         
                       <div
                         id="categoryError"
@@ -176,7 +176,7 @@
                       ></div>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-4">
                     <div class="mb-4">
                       <label class="form-label">Stock</label>
                       <input
@@ -191,6 +191,15 @@
                         id="stockError"
                         class="error-message text-danger"
                       ></div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="mb-4">
+                      <label class="form-label">Status</label>
+                      <select class="form-select" id="Status" name="status">
+                        <option value="Active" <%= (product.status === "Active")? "selected" : ''%>>Active</option>
+                        <option value="Inactive" <%= (product.status === "Inactive")? "selected" : ''%>>Inactive</option>
+                      </select>
                     </div>
                   </div>
                   <div class="col-lg-6">
@@ -233,42 +242,44 @@
                     </div>
                   </div>
                 </div>
-
                 <div class="col-lg-12">
                   <div class="card mb-4">
                     <div class="card-header d-flex justify-content-between">
-                      <h4>Images</h4>
-                      
+                      <h4>Images</h4>   
                   </div>
-                  
-                      <div class="card-body">
-                          
+                  <input
+                            class="form-control"
+                            type="file"
+                            multiple
+                            id="images"
+                            name="productImages"
+                            onchange="previewImage()"
+                          />
+                      <div class="card-body">    
                           <div id="imagesError" class="error-message text-danger"></div>
-                          <div class="d-flex overflow-auto">
+                          <div class="d-inline-flex overflow-auto">
                             <div
                                 id="image-preview"
-                                class="image-container overflow-auto m-2" 
-                                style="max-height: 250px; margin: 10px;"
+                                class="image-container overflow-auto m-2 justify-content-between"
+                                style="max-height: 300px; margin: 10px;"
                             ></div>
                         </div>
-                        
-                          
+                         
                           <div class="d-flex overflow-auto">
                             
-                              <% product.images.forEach(e => {console.log(e); %>
+                              <% if (product.images.length > 0) { %>
+                                <% product.images.forEach(e => { %>
                                 
                                   <div class="m-2 text-center">
                                       <img class="mb-2" src="<%= e.path %>" alt="product Image" >
                                       <div><a href="/admin/edit-delete-image?SingleImgId=<%= e._id%>&productId=<%= product._id %>" class="btn btn-danger">Delete</a></div>
                                   </div>
                               <% }) %>
+                              <% } %>
                           </div>
                       </div>
                   </div>
                   </div>
-              
-              
-
                     <div class="row">
                     <div class="d-flex align-items-center justify-content-center">
                       <button
